k8s/services-dev/patches/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: smartfaq-api
spec:
  serviceName: smartfaq-api
  replicas: 1
  selector:
    matchLabels:
      app: smartfaq-api
  template:
    spec:
      containers:
        - name: smartfaq-api
          image: asia-southeast1-docker.pkg.dev/enspara/smartfaq/smartfaq-api:dev-latest
          imagePullPolicy: Always
          volumeMounts:
            - name: storage-volume
              mountPath: /app/uploads
            - name: tmp-volume
              mountPath: /tmp
            - name: model-cache-volume
              mountPath: /app/.cache
            - name: logs-volume
              mountPath: /app/logs
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 2.5Gi
              cpu: "1.5"
            limits:
              memory: 4Gi
              cpu: "3"
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: logs-volume
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: storage-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: model-cache-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 2Gi
